--- a/docker/Dockerfile.master
+++ b/docker/Dockerfile.master
@@ -1,13 +1,9 @@
 FROM python:3.11-slim
-
 WORKDIR /app
-
-COPY requirements.txt /app/
+COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app
-
 EXPOSE 8000
 
-CMD uvicorn src.services.master.app:app --host 0.0.0.0 --port 8000
+CMD ["uvicorn", "src.services.master.app:app", "--host", "0.0.0.0", "--port", "8000"]
